syntax = "proto3";

package notifications;

service EmailsService {
    rpc sendEmailInformation (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
    string name = 1;
    string email = 2;
    double amount = 3;
    string status = 4;
    int32 timeDuration = 5;
}

message NotificationResponse {
    bool success = 1;
    string message = 2;
}
